# template-cpp

./: .gitignore  exec.sh  makefile  meson.build  meson.qt.build  run.sh
src/: main.cpp
